--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,32 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow-x: hidden;
+  outline: 0;
 }
-
+html {
+font-family: 'Poppins', sans-serif;
+}
+:-webkit-any(button) {
+  border: none;
+  background-color: transparent;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 main {
   width: 85vw;
   min-height: 80vh;
